se crearon los servidores,repositorios de reportePreventivo.